name: tmc
version: 0.0.0.1
build-type: Simple
cabal-version: >= 1.2
library
    exposed-modules: Music.TMC.Cache
                     Music.TMC.Example
                     Music.TMC.Prog
    build-depends: base
                 , bytestring
                 , cryptohash
                 , directory
                 , free
                 , process
