name: tmc
version: 0.0.0.1
build-type: Simple
cabal-version: >= 1.2
library
    ghc-options: -Wall
    exposed-modules: Music.TMC.Cache
                     Music.TMC.Example
                     Music.TMC.Prog
                     Music.TMC.Run
                     Music.TMC.Tools
                     Music.TMC.Types
    other-modules: Music.TMC.Internals
    build-depends: base
                 , bytestring
                 , cryptohash
                 , directory
                 , free
                 , process
