name: tmc
version: 0.0.0.1
build-type: Simple
cabal-version: >= 1.2
library
    ghc-options: -Wall
    exposed-modules: Music.TMC
                     Music.TMC.Cache
                     Music.TMC.Example
                     Music.TMC.Optimize
                     Music.TMC.Prog
                     Music.TMC.Run
                     Music.TMC.Tools
                     Music.TMC.Types
    other-modules: Music.TMC.Internals
                   Music.TMC.Logger
    build-depends: base
                 , bytestring
                 , cryptohash
                 , data-default
                 , directory
                 , free
                 , mtl
                 , process
test-suite hunittests
    type: exitcode-stdio-1.0
    ghc-options: -Wall -Werror
    main-is: Tests.hs
    build-depends: HUnit
